# kweaver-app

./: .gitignore  API.md  Agent.md  CLAUDE.md  README.md  analyze_pcm.ps1  gradlew  gradlew.bat  settings.gradle.kts
.claude/: settings.local.json
.claude/plans/: curious-hugging-hoare.md
.claude/skills/benchmark-models/: SKILL.md
.claude/skills/careful/: SKILL.md
.claude/skills/codex/: SKILL.md
.claude/skills/connect-chrome/: SKILL.md
.github/workflows/: android-ci.yml
.trae/rules/: project_rules.md
app/: build.gradle.kts  proguard-rules.pro
asr_audio/: recording_1778552007508.pcm  recording_1778552178168.pcm  recording_1778552611127.pcm  recording_1778552700535.pcm  recording_1778552826558.pcm
asr_audio/asr_audio/: recording_1778551937617.pcm  recording_1778552145843.pcm  recording_1778552602381.pcm  recording_1778552914138.pcm  recording_1778553213364.pcm  recording_1778553227400.pcm
asr_audio_latest/: recording_1778553469181.pcm  recording_1778554120513.pcm  recording_1778554293939.pcm
docs/: android-development-handbook.md
docs/tts/: API.md  Dockerfile  docker-compose.yml  main.py  requirements.txt
e2e-tests/: conftest.py  pyproject.toml
e2e-tests/pages/: __init__.py  base_page.py  chat_page.py  config_page.py  digital_human_page.py  home_page.py  login_page.py  session_page.py  settings_page.py
e2e-tests/tests/: test_app_launch.py  test_bkn_creator_chat.py  test_chat.py  test_chat_flow.py  test_config.py  test_digital_human.py  test_login.py  test_navigation.py  test_session_history.py
gradle/: libs.versions.toml
(+173 files in other folders)
